# riamu.v3

./: .dockerignore  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Pipfile  README.md  clippy.toml  compose.yml  pyproject.toml
.cargo/: config.toml
crates/c/src/: bindings.rs  lib.rs
crates/c/src/rsvg/: error.rs  handle.rs
crates/client/src/: cache.rs  client.rs  commands.rs  db.rs  main.rs
crates/client/src/client/: commands.rs  context.rs  env.rs
crates/client/src/commands/: deezer.rs  download.rs  imgur.rs  tiktok.rs  weather.rs
crates/client/src/commands/lookup/: imdb.rs  urban_dictionary.rs  wikipedia.rs
crates/client/src/commands/meta/: info.rs  speed.rs
crates/client/src/commands/repost/: _2ch.rs  _4chan.rs
crates/client/src/commands/user/status/: history.rs
crates/client/src/db/entities/: prelude.rs  status.rs  user.rs
crates/client/src/db/migrator/: m000001_counter.rs  m000002_user.rs  m000004_user_name.rs
crates/lib/: Cargo.toml
crates/lib/src/: ffmpeg.rs  lib.rs  text.rs
crates/lib/src/discord/: colors.rs
crates/lib/src/fmt/: plural.rs
crates/lib/src/fmt/num/: structs.rs  traits.rs
crates/lib/src/hash/: splitmix64.rs
crates/lib/src/random/: xorshift64.rs
crates/lib/src/weather/: api.rs
crates/lib/src/weather/api/: onecall.rs
crates/lib/src/weather/render/: components.rs  draw.rs  range.rs
crates/lib/src/weather/render/components/: current.rs  daily.rs  hourly.rs
crates/lib/src/weather/render/util/: cairo.rs
crates/macros/src/: lib.rs
crates/python/src/lib/: dl.rs  dz.rs  lib.rs
crates/python/src/lib/dl/: download.rs  search.rs
migrations/: 20231101003249_init.sql  20231101012722_refactor.sql  20231103010629_drop_rowid.sql  20231120004233_ratelimits.sql  20231122033336_replies.sql  20240103143335_drop_replies.sql  20240103143357_refactor.sql
nginx/config/: nginx.conf
nginx/config-embed-hack/: embed.html  nginx.conf
nginx/config-experimental/: nginx.conf
nginx/config-perl-atime/: modules.pm
python/: __main__.py  cli_to_api.py
python/lib/: __init__.py  dl.py  dz.py  logs.py  util.py
python/tests/: test_dl.py  test_dz.py
rust/api/: Cargo.toml
rust/api/src/: _2ch.rs  _4chan.rs  lib.rs  random.rs  regex.rs
rust/api/src/_2ch/: thread.rs
rust/api/src/_4chan/: catalog.rs
rust/c/: Cargo.toml  build.rs
rust/c/src/: bindings.rs  fontconfig.rs  rsvg.rs
rust/c/src/rsvg/: error.rs  handle.rs
rust/cache/: Cargo.toml
rust/cache/src/: lib.rs
rust/cairo-ext/: Cargo.toml
rust/cairo-ext/src/: image_surface_ext.rs  lib.rs
rust/cairo-ext/src/blur/: accurate.rs  fast.rs
rust/client/: Cargo.toml  build.rs
rust/client-macros/: Cargo.toml
rust/client-macros/src/: choice.rs  command.rs  lib.rs  util.rs
rust/client/src/: cache.rs  client.rs  commands.rs  db.rs  main.rs  tracing.rs
rust/client/src/client/: command.rs  command_error.rs  commands.rs  context.rs  env.rs  traits.rs  util.rs
rust/client/src/commands/: _2ch.rs  _4chan.rs  deezer.rs  download.rs  imgur.rs  random.rs  tiktok.rs  weather.rs
rust/client/src/commands/lookup/: imdb.rs  omdb.rs  urban_dictionary.rs  wikipedia.rs
rust/client/src/commands/meta/: info.rs  shell.rs  speed.rs  speed_to_discord.rs
rust/client/src/commands/repost/: _2ch.rs  _4chan.rs
rust/client/src/commands/text/: style.rs
rust/client/src/commands/user/: profile.rs
rust/client/src/commands/user/status/: history.rs
rust/client/src/db/: counters.rs  ratelimits.rs  replies.rs  statuses.rs  types.rs  users.rs
rust/client/src/db/entities/: counter.rs  mod.rs  status.rs
rust/client/src/db/migrator/: m000003_status.rs  m000005_status_clients.rs  mod.rs
rust/color/: Cargo.toml
rust/color/src/: convert.rs  lib.rs  oklab.rs  srgb.rs
rust/color/src/oklab/: helpers.rs  lab.rs  lch.rs  lms.rs  rgb.rs
rust/color/src/srgb/: f32_to_srgb8.rs  srgb.rs  srgb8_to_f32.rs  transfer_fns.rs
rust/color/src/srgb/f32_to_srgb8/: v1.rs  v2.rs
rust/color/src/srgb/fast/: f32_to_srgb8.rs  srgb8_to_f32.rs
rust/color/src/srgb/fast/f32_to_srgb8/: helpers.rs  v1.rs  v2.rs
rust/discord/: Cargo.toml
rust/discord/src/: link.rs
rust/ffmpeg/: Cargo.toml
rust/fmt/: Cargo.toml
rust/fmt/src/: lib.rs  num.rs
rust/fmt/src/num/: structs.rs
rust/gcra/: Cargo.toml
rust/gcra/src/: lib.rs
rust/lib/: Cargo.toml
rust/lib/src/: discord.rs  ffmpeg.rs  fmt.rs  gcra.rs  html.rs  lib.rs  random.rs  regex.rs  srgb.rs  task.rs
rust/lib/src/api/: _2ch.rs  _4chan.rs
rust/lib/src/api/_2ch/: catalog.rs
rust/lib/src/api/_4chan/: catalog.rs  thread.rs
rust/lib/src/cairo/: blur.rs  ext.rs  util.rs
rust/lib/src/cairo/blur/: accurate.rs  fast.rs
rust/lib/src/color/: oklab.rs  srgb.rs
rust/lib/src/color/oklab/: gamut_clip.rs  helpers.rs  hsl.rs  hsv.rs  lab.rs
rust/lib/src/color/srgb/: f32_to_srgb8.rs  float_to_srgb8.rs  transfer_fns.rs
rust/lib/src/discord/: link.rs
rust/lib/src/fmt/num/: structs.rs  tables.rs
rust/lib/src/random/: weighted.rs  xorshift32.rs  xorshift64.rs
rust/lib/src/text/: style.rs
rust/lib/src/weather/: api.rs  render.rs
rust/lib/src/weather/api/: geo.rs  onecall.rs
rust/lib/src/weather/render/: codes.rs  draw.rs  icons.rs  iso3166.rs  range.rs  util.rs
rust/lib/src/weather/render/components/: current.rs  daily.rs  hourly.rs
rust/macros/: Cargo.toml
rust/macros/src/: choice.rs  command.rs  util.rs
rust/python/: Cargo.toml
rust/python/src/: ext.rs  lib.rs  logs.rs
rust/python/src/lib/dl/: download.rs  downloader.rs
rust/random/: Cargo.toml
rust/random/src/: lib.rs  xorshift64.rs
rust/regex-ext/: Cargo.toml
rust/regex-ext/src/: lib.rs
rust/sandbox/: Cargo.toml
rust/util/: Cargo.toml
rust/util/src/: html.rs  lib.rs  network.rs  task.rs
rust/util/src/text/: style.rs
rust/weather/: Cargo.toml
rust/weather/src/: render.rs
rust/weather/src/api/: onecall.rs
rust/weather/src/render/: fmt.rs  util.rs
rust/weather/src/render/components/: current.rs  daily.rs  hourly.rs
scripts/: download-assets  get-deps
