[workspace]
default-members = ["rust/client"]
members = ["rust/*"]
resolver = "2"

[workspace.dependencies]
c = { path = "rust/c" }
lib = { path = "rust/lib" }
macros = { path = "rust/macros" }
python = { path = "rust/python" }

cairo-rs = { version = "*", default-features = false }
chrono = { version = "*", default-features = false }
ego-tree = "*"
filetime = "*"
futures = "*"
inotify = "*"
itertools = "*"
log = "*"
lru = { version = "*", default-features = false }
pango = "*"
pangocairo = "*"
procfs = { version = "*", default-features = false }
pyo3 = "*"
rayon = "*"
regex-lite = "*"
reqwest = { version = "*", default-features = false }
scraper = { version = "*", default-features = false }
serde = "*"
serde_json = "*"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false }
sqlx = { version = "*", default-features = false }
tempfile = "*"
thiserror = "*"
tokio = { version = "*", default-features = false }
tokio-util = "*"
tracing = "*"
tracing-subscriber = "*"
url = "*"

darling = "*"
proc-macro2 = "*"
quote = "*"
syn = "*"

bindgen = { version = "*", default-features = false }
pkg-config = "*"
