[workspace]
default-members = ["rust/client"]
members = ["rust/*"]
resolver = "2"

[workspace.package]
version = "3.0.0-alpha"
edition = "2021"

[workspace.lints.rust]
rust_2018_idioms = "deny"
uncommon_codepoints = "allow"
confusable_idents = "allow"
mixed_script_confusables = "allow"

[workspace.lints.clippy]
excessive_precision = "allow"
manual_range_contains = "allow"

[workspace.dependencies]
c = { path = "rust/c" }
lib = { path = "rust/lib" }
macros = { path = "rust/macros" }
python = { path = "rust/python" }

cairo-rs = { version = "*", default-features = false }
chrono = { version = "*", default-features = false }
ego-tree = "*"
filetime = "*"
futures = "*"
inotify = "*"
itertools = "*"
log = "*"
lru = { version = "*", default-features = false }
pango = "*"
pangocairo = "*"
parking_lot = "*"
procfs = { version = "*", default-features = false }
pyo3 = "*"
rand = "*"
rand_core = "*"
rayon = "*"
regex-lite = "*"
reqwest = { version = "*", default-features = false }
scraper = { version = "*", default-features = false }
serde = "*"
serde_json = "*"
serenity = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false }
tempfile = "*"
thiserror = "*"
tokio = { version = "*", default-features = false }
tokio-util = "*"
tracing = "*"
tracing-subscriber = "*"
url = "*"

darling = "*"
proc-macro2 = "*"
quote = "*"
syn = "*"

bindgen = { version = "*", default-features = false }
pkg-config = "*"
