[workspace]
default-members = ["rust/client"]
members = ["rust/*"]
resolver = "2"

[workspace.package]
version = "3.0.0-alpha"
edition = "2021"

[workspace.lints.rust]
rust_2018_idioms = "deny"
uncommon_codepoints = "allow"
confusable_idents = "allow"
mixed_script_confusables = "allow"

[workspace.lints.clippy]
absolute_paths = "warn"
excessive_precision = "allow"
manual_range_contains = "allow"
let_and_return = "allow"
too_many_arguments = "allow"
transmute_int_to_char = "allow"
transmute_num_to_bytes = "allow"
manual_unwrap_or_default = "allow"

[workspace.dependencies]
api = { path = "rust/api" }
c = { path = "rust/c" }
cache = { path = "rust/cache" }
cairo-ext = { path = "rust/cairo-ext" }
client-macros = { path = "rust/client-macros" }
color = { path = "rust/color" }
discord = { path = "rust/discord" }
ffmpeg = { path = "rust/ffmpeg" }
fmt = { path = "rust/fmt" }
gcra = { path = "rust/gcra" }
python = { path = "rust/python" }
random = { path = "rust/random" }
regex-ext = { path = "rust/regex-ext" }
util = { path = "rust/util" }
weather = { path = "rust/weather" }

cairo-rs = { version = "*", default-features = false }
chrono = { version = "*", default-features = false }
ego-tree = "*"
filetime = "*"
futures = "*"
inotify = "*"
itertools = "*"
log = "*"
lru = { version = "*", default-features = false }
pango = "*"
pangocairo = "*"
parking_lot = "*"
procfs = { version = "*", default-features = false }
pyo3 = "*"
rand = "*"
rand_core = "*"
rayon = "*"
regex = "*"
reqwest = { version = "*", default-features = false }
scraper = { version = "*", default-features = false }
serde = "*"
serde_json = "*"
serenity = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false }
tempfile = "*"
thiserror = "*"
tokio = { version = "*", default-features = false }
tokio-util = "*"
tracing = "*"
tracing-subscriber = "*"
url = "*"

darling = "*"
proc-macro2 = "*"
quote = "*"
syn = "*"

bindgen = { version = "*", default-features = false }
pkg-config = "*"
