[package]
name = "api"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ego-tree.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
tracing.workspace = true
url.workspace = true
