[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
c.workspace = true
cairo-rs = { workspace = true, features = ["v1_16"] }
chrono = { workspace = true, features = ["std"] }
ego-tree.workspace = true
futures.workspace = true
rand_core.workspace = true
regex-lite.workspace = true
reqwest = { workspace = true, features = ["default-tls", "json", "stream"] }
scraper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
