[package]
name = "lib"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
c.workspace = true
cairo-rs = { workspace = true, features = ["v1_16"] }
chrono = { workspace = true, features = ["std"] }
ego-tree.workspace = true
futures.workspace = true
itertools.workspace = true
rand.workspace = true
rand_core.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["default-tls", "json", "stream"] }
scraper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
