[package]
name = "sandbox"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
c.workspace = true
cairo-rs = { workspace = true, features = ["png", "v1_16"] }
chrono = { workspace = true, features = ["clock"] }
glam = { version = "0.24.1", features = ["fast-math", "core-simd"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
lib.workspace = true
pango = { workspace = true, features = ["v1_42"] }
pangocairo.workspace = true
rayon = "1.7.0"
rusqlite = "0.29.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
